[package]
name = "keyblock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cipher = "0.4.4"
aead = "0.5.2"
hex = "0.4.3"
cbc = "0.1.2"
cbc-mac = "0.1.1"
cmac = "0.7.2"
ctr = "0.9.2"
des = "0.8.1"
aes = "0.8.2"
dbl = "0.3.2"
getrandom = "0.2.9"

[dev-dependencies]
hex-literal = "0.3"
